Add pagination for Products Page

--- a/module_7/NorthwindSite/NorthwindSite/Views/Home/Categories.cshtml
+++ b/module_7/NorthwindSite/NorthwindSite/Views/Home/Categories.cshtml
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
 
-    @foreach (var cat in Model.categories)
+    @foreach (var cat in Model.Categories)
     {
         <tr>
             <th scope="col">@(count++)</th>
