--- a/module_7/NorthwindSite/NorthwindSite/Views/Home/Products.cshtml
+++ b/module_7/NorthwindSite/NorthwindSite/Views/Home/Products.cshtml
@@ -1,7 +1,7 @@
 ﻿@model NorthwindSite.Models.ProductsPageViewModel
 @{
     ViewData["Title"] = "Products";
-    int count = Model.PaginationInfo.PageSize * (Model.PaginationInfo.PageNumber-1) + 1;
+    int count = Model.PaginationInfo.PageSize * (Model.PaginationInfo.PageNumber - 1) + 1;
 }
 
 <h1>Products</h1>
@@ -11,13 +11,11 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">ProductName</th>
-            <th scope="col">SupplierName</th>
-            <th scope="col">CategoryName</th>
+            <th scope="col">Supplier</th>
+            <th scope="col">Category</th>
             <th scope="col">QuantityPerUnit</th>
-            <th scope="col">UnitPrice</th>
-            <th scope="col">UnitsInStock</th>
-            <th scope="col">UnitsOnOrder</th>
-            <th scope="col">ReorderLevel</th>
+            <th scope="col">Price</th>
+            <th scope="col">InStock</th>
         </tr>
     </thead>
     <tbody>
@@ -32,13 +30,16 @@
                 <th scope="col">@cat.QuantityPerUnit</th>
                 <th scope="col">@cat.UnitPrice</th>
                 <th scope="col">@cat.UnitsInStock</th>
-                <th scope="col">@cat.UnitsOnOrder</th>
-                <th scope="col">@cat.ReorderLevel</th>
-
             </tr>
         }
     </tbody>
 </table>
+<div class="float-right">
+    <a class="btn btn-primary btn-newProduct ">
+        New product
+    </a>
+</div>
+
 
 @if (Model.PaginationInfo.HasPreviousPage)
 {
@@ -59,4 +60,48 @@
         Next
         <i class="glyphicon glyphicon-chevron-right"></i>
     </a>
+}
+<div class="products__popup">
+    <div class="products__overlay">
+    </div>
+    <div class="products__newProduct">
+        <span class="products__btn-close">&#10006;</span>
+        <form asp-action="CreateProduct" asp-controller="Home" asp-antiforgery="true">
+            <div>
+                <div class="validation" asp-validation-summary="ModelOnly"></div>
+                <div>
+                    <label class="produts__nabel font-weight-bold" asp-for="@Model.ProductViewModel.ProductName"></label>
+                    <input type="text" asp-for="@Model.ProductViewModel.ProductName" />
+                    <span asp-validation-for="@Model.ProductViewModel.ProductName"></span>
+                </div>
+                <div>
+                    <label class="produts__nabel font-weight-bold" asp-for="@Model.ProductViewModel.Supplier"></label>
+                    <select asp-for="@Model.ProductViewModel.Supplier" asp-items="new SelectList(Model.ProductViewModel.Suppliers.Select(x => x.CompanyName))"></select>
+                </div>
+                <div>
+                    <label class="produts__nabel font-weight-bold" asp-for="@Model.ProductViewModel.Category"></label>
+                    <select asp-for="@Model.ProductViewModel.Category" asp-items="new SelectList(Model.ProductViewModel.Categories.Select(x => x.CategoryName))"></select>
+                </div>
+                <div>
+                    <label class="produts__nabel font-weight-bold" asp-for="@Model.ProductViewModel.QuantityPerUnit"></label>
+                    <input type="text" asp-for="@Model.ProductViewModel.QuantityPerUnit" />
+                </div>
+                <div>
+                    <label class="produts__nabel font-weight-bold" asp-for="@Model.ProductViewModel.UnitPrice"></label>
+                    <input type="text" asp-for="@Model.ProductViewModel.UnitPrice" />
+                    <span asp-validation-for="@Model.ProductViewModel.UnitPrice"></span>
+                </div>
+                <div class="pt-4 float-right">
+                    <input class="btn btn-outline-dark" type="submit" value="Save" />
+                </div>
+            </div>
+        </form>
+
+    </div>
+</div>
+
+@section scripts{
+
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
