--- a/module_7/NorthwindSite/NorthwindSite/Views/Shared/_Layout.cshtml
+++ b/module_7/NorthwindSite/NorthwindSite/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - NorthwindSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/products.css" />
 </head>
 <body>
     <header>
