--- a/module_7/NorthwindSite/NorthwindSite/Views/Home/Products.cshtml
+++ b/module_7/NorthwindSite/NorthwindSite/Views/Home/Products.cshtml
@@ -1,8 +1,9 @@
 ﻿@model NorthwindSite.Models.ProductsPageViewModel
 @{
     ViewData["Title"] = "Products";
-    var state = ViewData.ModelState;
+
     int count = Model.PaginationInfo.PageSize * (Model.PaginationInfo.PageNumber - 1) + 1;
+    Model.ProductViewModel.CurrentPage = Model.PaginationInfo.PageNumber;
 
 }
 
