--- a/module_7/NorthwindSite/NorthwindSite/Views/Shared/_CreateProductForm.cshtml
+++ b/module_7/NorthwindSite/NorthwindSite/Views/Shared/_CreateProductForm.cshtml
@@ -14,6 +14,7 @@
             <div>
                 <div class="validation" asp-validation-summary="ModelOnly"></div>
                 <input id="productId" type="hidden" asp-for="ProductId" />
+                <input type="hidden" asp-for="CurrentPage" />
                 <div>
                     <label class="produts__nabel font-weight-bold" asp-for="ProductName"></label>
                     <input id="productName" type="text" asp-for="ProductName" />
