--- a/module_9(Asynchronous Tasks)/AsyncAwait.Tasks/AsyncAwait.Task2.CodeReviewChallenge/Views/Shared/_Layout.cshtml
+++ b/module_9(Asynchronous Tasks)/AsyncAwait.Tasks/AsyncAwait.Task2.CodeReviewChallenge/Views/Shared/_Layout.cshtml
@@ -2,6 +2,25 @@
 @{
     string visitsCount = Context.Response.Headers[CustomHttpHeaders.TotalPageVisits];
 }
+    <script type="text/javascript">
+        (function startTime() {
+            var i = 0;
+            function time() {
+                var element = document.getElementById('returnUrlTime');
+                if (element != null) {
+                    element.innerHTML = i;
+                    i++;
+                }
+            }
+            time();
+            setInterval(time, 1000);
+        })();
+
+    </script>
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,51 +40,54 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
             
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Help">Help</a></li>
-                </ul>
-            </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a onclick="startTime()" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Help">Help</a></li>
+            </ul>
         </div>
-    </nav>
-
-    <partial name="_CookieConsentPartial" />
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <h3>This page has been visited <b style="color: darkorange">@visitsCount</b> time(-s) since the launch of the service.</h3>
-            2019 - AsyncAwait.CodeReviewChallenge - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </footer>
     </div>
+</nav>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+<partial name="_CookieConsentPartial" />
 
-    @RenderSection("Scripts", required: false)
+<div class="container body-content">
+    @RenderBody()
+    <hr />
+    <footer>
+        <div id="returnUrlTime"></div>
+        <h3>This page has been visited <b style="color: darkorange">@visitsCount</b> time(-s) since the launch of the service.</h3>
+        2019 - AsyncAwait.CodeReviewChallenge - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </footer>
+</div>
+
+<environment include="Development">
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</environment>
+<environment exclude="Development">
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+            asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+            asp-fallback-test="window.jQuery"
+            crossorigin="anonymous"
+            integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+            asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+            crossorigin="anonymous"
+            integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
+    </script>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+</environment>
+
+@RenderSection("Scripts", required: false)
 </body>
 </html>
+
+
